tests/fixtures/errors/unknown_member_value.z
# Unknown members on concrete user-defined types are hard errors (the
# member-miss leg used to return silently and the emitter produced
# garbage). Shells, stdlib types, and template walks stay exempt.

U9: union {
    alpha: i64
    beta: String
}

C9: class {
    x: i64
} as {
    bump: function {:this} is {
        this.x = this.x + 1
    }
}

R9: record {
    y: i64
}

main: function is {
    u: (U9.alpha 5)
    a: u.nosuch
    c: (C9 x: 1)
    b: c.bmp
    r: (R9 y: 2)
    d: r.nada
}
